fix: #footer 장원태 [240222] - footer가 일부 환경에서 페이지의 하단부를 가리는 현상 수정 - footer에 대한 align-self를 flex-end로 지정 - height: 100%였던 일부 페이지 main div에 대해 해당 스타일 해제

--- a/src/main/reactjs/src/components/mypage/MyPageStyle.css
+++ b/src/main/reactjs/src/components/mypage/MyPageStyle.css
@@ -1,6 +1,6 @@
 div.mypagemain {
     margin: 0 30px;
-    height: 100%;
+    /* height: 100%; */
     display: flex;
     flex-direction: column;
 }
@@ -9,19 +9,19 @@ div.mypageheader {
     height: 60px;
 }
 
-div.mypagemain div.profile{
+div.mypagemain div.profile {
     align-self: center;
     text-align: center;
     margin-top: 30px;
 }
 
-div.mypagemain div.profile img{
+div.mypagemain div.profile img {
     width: 150px;
     height: 150px;
     border-radius: 10px;
 }
 
-div.mypagemain div.iconmenu{
+div.mypagemain div.iconmenu {
     width: 100%;
     align-self: center;
     text-align: center;
@@ -29,11 +29,11 @@ div.mypagemain div.iconmenu{
     justify-content: space-between;
 }
 
-div.mypagemain div.iconmenu div{
+div.mypagemain div.iconmenu div {
     cursor: pointer;
 }
 
-div.mypagemain div.iconmenu h6{
+div.mypagemain div.iconmenu h6 {
     margin: 10px 0px;
 }
 
@@ -59,6 +59,6 @@ div.mypagemain div.lastmenu{
 } */
 
 
-.h_35{
+.h_35 {
     height: 40px;
 }
